--- a/AULAS/Unidade_01/5.0-listas.ipynb
+++ b/AULAS/Unidade_01/5.0-listas.ipynb
@@ -1064,6 +1064,447 @@
     "x.sort()\n",
     "x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6521fbcb",
+   "metadata": {},
+   "source": [
+    "### Aprofundando em estruturas de dados simples em python\n",
+    "\n",
+    "**1.1 Motivação**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59a9bb25",
+   "metadata": {},
+   "source": [
+    "O aplicativo do seu banco registra toda movimentação financeira . O final do dia , o app consolida o saldo final para que você possa controlar sua vida financeira "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7811ac75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "860.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "dia_saldo_inicial = 1000\n",
+    "\n",
+    "dia_11_transacao_1 = 243\n",
+    "dia_11_transacao_2 = -798.58\n",
+    "dia_11_transacao_3 = 427.12\n",
+    "dia_11_transacao_4 = -10.91\n",
+    " \n",
+    "dia_11_saldo_final  = dia_saldo_inicial + dia_11_transacao_1 + dia_11_transacao_2 + dia_11_transacao_3 + dia_11_transacao_4\n",
+    "print (dia_11_saldo_final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7d566b9",
+   "metadata": {},
+   "source": [
+    "Será que existe uma forma melhor de armazenar transações diárias ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30201791",
+   "metadata": {},
+   "source": [
+    " **1.2 Definição**\n",
+    " \n",
+    " Armazenam sequências mutáveis e ordenadas de valores . são do tipo list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "16cd60ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Andre Peres', 'andre.perez', 'andreperez@gmail.com']\n",
+      "<class 'list'>\n",
+      "['Andre Perez', 20, 'andre.perez', 'andre123', 'andre.perez@gmail.com', 723.15, True]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "usuario_web = ['Andre Peres','andre.perez','andreperez@gmail.com']\n",
+    "print(usuario_web)\n",
+    "print(type(usuario_web))\n",
+    "\n",
+    "idade = 20\n",
+    "saldo_em_conta = 723.15\n",
+    "usuario_loggedin = True\n",
+    "\n",
+    "usuario_web = ['Andre Perez', idade, 'andre.perez', 'andre123', 'andre.perez@gmail.com', saldo_em_conta, usuario_loggedin]\n",
+    "print(usuario_web)\n",
+    "print(type(usuario_web))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28fd16cb",
+   "metadata": {},
+   "source": [
+    "**1.3 Operações**\n",
+    "\n",
+    ". + (Concatenação)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08993513",
+   "metadata": {},
+   "source": [
+    "**Exemplo :** Fabricantes de **Hardware* mobile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8df0b75b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['xiaomi', 'huawei', 'apple', 'motorola']\n",
+      "['apple', 'motorola']\n",
+      "['xiaomi', 'huawei', 'apple', 'motorola']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fabricantes_mobile_china = ['xiaomi', 'huawei']\n",
+    "Fabricantes_mobile_eua = ['apple', 'motorola']\n",
+    "fabricantes_mobile = fabricantes_mobile_china + Fabricantes_mobile_eua\n",
+    "\n",
+    "print(fabricantes_mobile)\n",
+    "print(Fabricantes_mobile_eua)\n",
+    "print(fabricantes_mobile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9da7929",
+   "metadata": {},
+   "source": [
+    "Outra operação muito ultilizada é a de fatiamento (**slicing*),semelhante ao de **strings*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08497e61",
+   "metadata": {},
+   "source": [
+    "Fatiamento fixo:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b6be245f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:xiaomi\n",
+      "-1: motorola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'0:{fabricantes_mobile[0]}')\n",
+    "print(f'-1: {fabricantes_mobile[-1]}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f7e4f8c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "china: ['xiaomi', 'huawei']\n",
+      "eua: ['apple', 'motorola']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fatiamento por intervalo:\n",
+    "fabricantes_mobile_china = fabricantes_mobile[0:2]\n",
+    "Fabricantes_mobile_eua = fabricantes_mobile[2:len(fabricantes_mobile)]\n",
+    "\n",
+    "print('china: ' + str(fabricantes_mobile_china))\n",
+    "print('eua: ' + str(Fabricantes_mobile_eua))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "62bd733f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['xiaomi', 'huawei', 'apple', 'motorola']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Podemos adicioanr elementos a uma posição especifica da lista :\n",
+    "\n",
+    "print (fabricantes_mobile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7ecf0ec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['xiaomi', 'huawei', 'nokia', 'motorola']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fabricantes_mobile  [2] = 'nokia'\n",
+    "print (fabricantes_mobile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b985dd5e",
+   "metadata": {},
+   "source": [
+    "**Métodos \n",
+    "\n",
+    "São métodos nativos do python que nos ajudam a trabalhar no dia a dia com listas ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5aee36f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.05, 0.07, 0.02, 0.04, 0.08]\n"
+     ]
+    }
+   ],
+   "source": [
+    "juros = [0.05,0.07,0.02,0.04,0.08]\n",
+    "print(juros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fe097688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1, 0.05, 0.07, 0.02, 0.04, 0.08]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inseir um elemennto sem substituir : list.insert(index,val)\n",
+    "juros.insert(0,0.10)\n",
+    "print(juros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f90c5151",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1, 0.05, 0.07, 0.02, 0.04, 0.08, 0.09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inserir um elemento no fim da lista : list.append(val)\n",
+    "juros.append(0.09)\n",
+    "print(juros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "04962d85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.05, 0.07, 0.02, 0.04, 0.08, 0.09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Removendo um elemento pelo valor : list.remove(val)\n",
+    "juros.remove(0.1)\n",
+    "print(juros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2d0d3c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remover um elemento pelo indice : list.pop(val)\n",
+    "\n",
+    "terceiro_juros = juros.pop(2)\n",
+    "print (terceiro_juros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5121969f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.05, 0.07, 0.04, 0.08, 0.09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(juros)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "633c0208",
+   "metadata": {},
+   "source": [
+    "**1.5 Coversão**\n",
+    "\n",
+    "Podemos Converter alguns tipos de variaveis em listas , como *Strings*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0608c6b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "andre.perez@gmail.com\n",
+      "['a', 'n', 'd', 'r', 'e', '.', 'p', 'e', 'r', 'e', 'z', '@', 'g', 'm', 'a', 'i', 'l', '.', 'c', 'o', 'm']\n"
+     ]
+    }
+   ],
+   "source": [
+    "email ='andre.perez@gmail.com'\n",
+    "caractere_email = list(email)\n",
+    "print(email)\n",
+    "print(caractere_email)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c0efdd",
+   "metadata": {},
+   "source": [
+    "**1.6 Revisitando a motivação**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0049b39f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[243, -798.58, 427.12, -10.91]\n",
+      "860.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "dia_11_saldo_inicial =1000\n",
+    "\n",
+    "dia_11_transacaoes = list()\n",
+    "\n",
+    "dia_11_transacaoes.append(243)\n",
+    "dia_11_transacaoes.append(-798.58)\n",
+    "dia_11_transacaoes.append(427.12)\n",
+    "dia_11_transacaoes.append(-10.91)\n",
+    "\n",
+    "print(dia_11_transacaoes)\n",
+    "\n",
+    "dia_11_saldo_final =  dia_11_saldo_inicial +  dia_11_transacaoes[0]+dia_11_transacaoes[1]+dia_11_transacaoes[2]+ dia_11_transacaoes[3]\n",
+    "print(dia_11_saldo_final)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bc8e63f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
