--- a/AULAS/Unidade_01/6.0-dicionario.ipynb
+++ b/AULAS/Unidade_01/6.0-dicionario.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e5064d78",
    "metadata": {},
    "outputs": [
@@ -526,6 +526,310 @@
     "    }\n",
     "}\n",
     "print(cadastro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "041798cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1980"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadastro['André'] ['pais'] ['mãe']['ano_nascimento']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dc43764",
+   "metadata": {},
+   "source": [
+    "**3.3. Operações**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3944b0b4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f077dff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credito = {'123':750, '789':980}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f344d0db",
+   "metadata": {},
+   "source": [
+    "Elementos são acessados pela sua chave.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a4e7ad00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "750\n",
+      "980\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_123 = credito ['123']\n",
+    "score_789 = credito ['789']\n",
+    "\n",
+    "print(score_123)\n",
+    "print(score_789)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0ab731c",
+   "metadata": {},
+   "source": [
+    "Elementos são atualizados pela sua chave "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f4f1129b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'123': 435, '789': 980}\n"
+     ]
+    }
+   ],
+   "source": [
+    "credito['123'] = 435\n",
+    "print(credito)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2e1507f",
+   "metadata": {},
+   "source": [
+    "Para adicionar um novo elemento , basta criar um novo elemento chave-valor "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3e4e609b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'123': 435, '789': 980, '456': 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "credito['456'] = 1000\n",
+    "print(credito)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d78d25a",
+   "metadata": {},
+   "source": [
+    "**3.4.Métodos**\n",
+    "\n",
+    "São métodos nativos do python que nos ajudam a trabalhar no dia a dia com dicionários \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fb6cb183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artigo = dict(\n",
+    "    titulo = 'Modulo 02| Python Estruturas de dados ',\n",
+    "    corpo = 'Tópicos , Aulas ,listas, conjuntos ,Dicionários, ...',\n",
+    "    total_caracteres = 1530\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eebea00b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'Modulo 02| Python Estruturas de dados ', 'corpo': 'Tópicos , Aulas ,listas, conjuntos ,Dicionários, ...', 'total_caracteres': 7850}\n",
+      "{'titulo': 'Modulo 02| Python Estruturas de dados ', 'corpo': 'Tópicos , Aulas ,listas, conjuntos ,Dicionários, ...', 'total_caracteres': 7850}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adicionar / atualizar um elemento pelo chave-valor : dict.update(dict)\n",
+    "print(artigo)\n",
+    "artigo.update({'total_caracteres' : 7850})\n",
+    "print(artigo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f5682dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'Modulo 02| Python Estruturas de dados ', 'corpo': 'Tópicos , Aulas ,listas, conjuntos ,Dicionários, ...', 'total_caracteres': 7850}\n",
+      "{'titulo': 'Modulo 02| Python Estruturas de dados ', 'corpo': 'Tópicos , Aulas ,listas, conjuntos ,Dicionários, ...'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remover um elemento pelo chave : dict.pop (key)\n",
+    "print(artigo)\n",
+    "total_caracteres = artigo.pop('total_caracteres')\n",
+    "print(artigo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb9ae7d2",
+   "metadata": {},
+   "source": [
+    "**3.5 Conversão**\n",
+    "\n",
+    "Podemos converter as chaves e os itens de um dicionarios em uma lista ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cecb902c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artigo = dict(\n",
+    "    titulo = 'Módulo 02| Python Estruturas de dados ',\n",
+    "    corpo =  'Tópicos , aulas, listas,conjuntos ',\n",
+    "    total_caracteres = 1530\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b54ffa8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['titulo', 'corpo', 'total_caracteres']\n"
+     ]
+    }
+   ],
+   "source": [
+    "chaves = list((artigo.keys()))\n",
+    "print(chaves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a8af5760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Módulo 02| Python Estruturas de dados ', 'Tópicos , aulas, listas,conjuntos ', 1530]\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = list(artigo.values())\n",
+    "\n",
+    "print(valores)\n",
+    "print(type(artigo))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce4b018",
+   "metadata": {},
+   "source": [
+    "**3.6. Revisitando a motivação**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f666afa3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "95d38b62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'nome': 'rede1', 'senha': 'cnx_cnx'}, {'nome': 'uai-fi', 'senha': 'r3d3'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wifi_disponiveis = []\n",
+    "\n",
+    "rede = {'nome': 'rede1', 'senha' : 'cnx_cnx'}\n",
+    "wifi_disponiveis.append(rede)\n",
+    "\n",
+    "rede = {'nome': 'uai-fi', 'senha': 'r3d3'}\n",
+    "wifi_disponiveis.append(rede)\n",
+    "\n",
+    "print(wifi_disponiveis)\n"
    ]
   }
  ],
