--- a/PRATICANDO/EX_BASICS/DSA_Python_Cap04_Exercicios.ipynb
+++ b/PRATICANDO/EX_BASICS/DSA_Python_Cap04_Exercicios.ipynb
@@ -90,8 +90,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['carro', 'moto', 'casa', 'iphone', 'avião']\n"
           ]
@@ -116,8 +116,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Amo você\n"
           ]
@@ -144,8 +144,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3\n"
           ]
@@ -172,8 +172,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{}\n"
           ]
@@ -197,8 +197,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'Banco': 258, 'Netflix': 'Amo@filmes123', 'ifood': 1979}\n"
           ]
@@ -222,8 +222,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'Banco': 258, 'Netflix': 'Amo@filmes123', 'ifood': 1979, 'Backup_senha': 8900}\n"
           ]
@@ -248,8 +248,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'vendedor': 'vendas', 'gerente': 'vendedor', 'admin': ['vendedor', 'gerente']}\n"
           ]
@@ -280,8 +280,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['novo começo', (1, 'arroz'), {'nome': 'Cristiano', 'segundo_nome': 'machado'}, 4.5]\n"
           ]
@@ -311,17 +311,17 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'Cientista de Dados '"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'Cientista de Dados '"
+            ]
           },
+          "execution_count": 27,
           "metadata": {},
-          "execution_count": 27
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -333,22 +333,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DGp0Wmeq_yin"
+      },
       "source": [
         "# 1. **Listas**\n",
         "\n",
         "Criei uma lista chamada filmes com o nome dos 10 primeiros filmes mais bem\n",
         "avaliados no site no IMDB. Imprima o resultado."
-      ],
-      "metadata": {
-        "id": "DGp0Wmeq_yin"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Filmes = ['Um Sonho de Liberdade','O Poderoso Chefão','Batman: O Cavaleiro das Trevas','O Poderoso Chefão: Parte II','12 Homens e uma Sentença',' O Senhor dos Anéis: O Retorno do Rei',' A Lista de Schindler','Pulp Fiction: Tempo de Violência',' O Senhor dos Anéis: A Sociedade do Anel',' Três Homens em Conflito']\n",
-        "print(Filmes)"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -356,24 +353,23 @@
         "id": "KKJFDdBzAGdo",
         "outputId": "341ba677-4e06-4a31-f9c9-68461ea776fd"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['Um Sonho de Liberdade', 'O Poderoso Chefão', 'Batman: O Cavaleiro das Trevas', 'O Poderoso Chefão: Parte II', '12 Homens e uma Sentença', ' O Senhor dos Anéis: O Retorno do Rei', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', ' O Senhor dos Anéis: A Sociedade do Anel', ' Três Homens em Conflito']\n"
           ]
         }
+      ],
+      "source": [
+        "Filmes = ['Um Sonho de Liberdade','O Poderoso Chefão','Batman: O Cavaleiro das Trevas','O Poderoso Chefão: Parte II','12 Homens e uma Sentença',' O Senhor dos Anéis: O Retorno do Rei',' A Lista de Schindler','Pulp Fiction: Tempo de Violência',' O Senhor dos Anéis: A Sociedade do Anel',' Três Homens em Conflito']\n",
+        "print(Filmes)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "mudança_de_posição = Filmes.pop('Um Sonho de Liberdade')\n",
-        "Filmes .insert('O Poderoso Chefão',mudança_de_posição)\n",
-        "print(mudança_de_posição)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -382,23 +378,30 @@
         "id": "eQaIXCvG_8Ov",
         "outputId": "8948497c-7e56-45e6-b5b3-307ec73a01c7"
       },
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "TypeError",
           "evalue": "'str' object cannot be interpreted as an integer",
+          "output_type": "error",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-fde12b573418>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmudança_de_posição\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFilmes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Um Sonho de Liberdade'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mFilmes\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'O Poderoso Chefão'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmudança_de_posição\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmudança_de_posição\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m mudança_de_posição = \u001b[43mFilmes\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mUm Sonho de Liberdade\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m Filmes.insert(\u001b[33m'\u001b[39m\u001b[33mO Poderoso Chefão\u001b[39m\u001b[33m'\u001b[39m,mudança_de_posição)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(mudança_de_posição)\n",
+            "\u001b[31mTypeError\u001b[39m: 'str' object cannot be interpreted as an integer"
           ]
         }
+      ],
+      "source": [
+        "mudança_de_posição = Filmes.pop('Um Sonho de Liberdade')\n",
+        "Filmes.insert('O Poderoso Chefão',mudança_de_posição)\n",
+        "print(mudança_de_posição)"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -415,9 +418,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.13.2"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
