--- a/PRATICANDO/EX_BASICS/DSA_Python_Cap04_Exercicios.ipynb
+++ b/PRATICANDO/EX_BASICS/DSA_Python_Cap04_Exercicios.ipynb
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -358,43 +358,150 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['Um Sonho de Liberdade', 'O Poderoso Chefão', 'Batman: O Cavaleiro das Trevas', 'O Poderoso Chefão: Parte II', '12 Homens e uma Sentença', ' O Senhor dos Anéis: O Retorno do Rei', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', ' O Senhor dos Anéis: A Sociedade do Anel', ' Três Homens em Conflito']\n"
+            "['Um Sonho de Liberdade', 'O Poderoso Chefão', 'Batman: O Cavaleiro das Trevas', 'O Poderoso Chefão: Parte II', '12 Homens e uma Sentença', ' O Senhor dos Anéis: O Retorno do Rei', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', ' O Senhor dos Anéis: A Sociedade do Anel', ' Três Homens em Conflito']\n",
+            "['O Poderoso Chefão', 'Um Sonho de Liberdade', 'Batman: O Cavaleiro das Trevas', 'O Poderoso Chefão: Parte II', '12 Homens e uma Sentença', ' O Senhor dos Anéis: O Retorno do Rei', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', ' O Senhor dos Anéis: A Sociedade do Anel', ' Três Homens em Conflito']\n"
           ]
         }
       ],
       "source": [
-        "Filmes = ['Um Sonho de Liberdade','O Poderoso Chefão','Batman: O Cavaleiro das Trevas','O Poderoso Chefão: Parte II','12 Homens e uma Sentença',' O Senhor dos Anéis: O Retorno do Rei',' A Lista de Schindler','Pulp Fiction: Tempo de Violência',' O Senhor dos Anéis: A Sociedade do Anel',' Três Homens em Conflito']\n",
-        "print(Filmes)"
+        "filmes = ['Um Sonho de Liberdade','O Poderoso Chefão','Batman: O Cavaleiro das Trevas','O Poderoso Chefão: Parte II','12 Homens e uma Sentença',' O Senhor dos Anéis: O Retorno do Rei',' A Lista de Schindler','Pulp Fiction: Tempo de Violência',' O Senhor dos Anéis: A Sociedade do Anel',' Três Homens em Conflito']\n",
+        "print(filmes)\n",
+        "\n",
+        "primeiro = filmes.pop(0) # Remove o primeiro filme e guarda\n",
+        "\n",
+        "segundo = filmes.pop(0) # Remove o segundo (que agora está na posição 0 após o pop acima)\n",
+        "\n",
+        "filmes.insert(0, primeiro) # Insere o antigo primeiro na posição 0 (onde estava o segundo)\n",
+        "\n",
+        "filmes.insert(0, segundo) # Insere o antigo segundo na posição 0 (empurrando o resto)\n",
+        "\n",
+        "print(filmes)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**2.Conjuntos**\n",
+        "\n",
+        "Aconteceu um erro no seu ranking. Simule a duplicação dos três últimos filmes da lista.\n",
+        "Imprima o resultado."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
-        },
-        "id": "eQaIXCvG_8Ov",
-        "outputId": "8948497c-7e56-45e6-b5b3-307ec73a01c7"
-      },
+      "execution_count": 1,
+      "metadata": {},
       "outputs": [
         {
-          "ename": "TypeError",
-          "evalue": "'str' object cannot be interpreted as an integer",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m mudança_de_posição = \u001b[43mFilmes\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mUm Sonho de Liberdade\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m Filmes.insert(\u001b[33m'\u001b[39m\u001b[33mO Poderoso Chefão\u001b[39m\u001b[33m'\u001b[39m,mudança_de_posição)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(mudança_de_posição)\n",
-            "\u001b[31mTypeError\u001b[39m: 'str' object cannot be interpreted as an integer"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Um Sonho de Liberdade', 'O Poderoso Chefão', 'Batman: O Cavaleiro das Trevas', 'O Poderoso Chefão: Parte II', '12 Homens e uma Sentença', ' O Senhor dos Anéis: O Retorno do Rei', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', ' O Senhor dos Anéis: A Sociedade do Anel', ' Três Homens em Conflito', 'Três Homens em Conflito', ' O Senhor dos Anéis: A Sociedade do Anel', 'O Poderoso Chefão']\n",
+            "['Batman: O Cavaleiro das Trevas', ' A Lista de Schindler', 'Pulp Fiction: Tempo de Violência', 'Um Sonho de Liberdade', ' Três Homens em Conflito', ' O Senhor dos Anéis: O Retorno do Rei', 'Três Homens em Conflito', 'O Poderoso Chefão: Parte II', ' O Senhor dos Anéis: A Sociedade do Anel', '12 Homens e uma Sentença', 'O Poderoso Chefão']\n"
           ]
         }
       ],
       "source": [
-        "mudança_de_posição = Filmes.pop('Um Sonho de Liberdade')\n",
-        "Filmes.insert('O Poderoso Chefão',mudança_de_posição)\n",
-        "print(mudança_de_posição)"
+        "filmes = ['Um Sonho de Liberdade','O Poderoso Chefão','Batman: O Cavaleiro das Trevas','O Poderoso Chefão: Parte II','12 Homens e uma Sentença',' O Senhor dos Anéis: O Retorno do Rei',' A Lista de Schindler','Pulp Fiction: Tempo de Violência',' O Senhor dos Anéis: A Sociedade do Anel',' Três Homens em Conflito','Três Homens em Conflito', ' O Senhor dos Anéis: A Sociedade do Anel', 'O Poderoso Chefão']\n",
+        "\n",
+        "print(filmes)\n",
+        "\n",
+        "filmes = list(set(filmes))\n",
+        "\n",
+        "print(filmes)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**3.Dicionários**\n",
+        "\n",
+        "Repita os exercícios da parte 1 (listas). Os elementos da lista filmes devem ser\n",
+        "dicionários no seguinte formato: {'nome': <nome-do-filme>, 'ano': <ano do\n",
+        "filme>}, 'sinopse': <sinopse do filme>} ."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'N_1': {'titulo': 'Um Sonho de Liberdade', 'ano_lançamento': 1994, 'Sinopse': 'Dois homens presos se reúnem ao longo de vários anos, encontrando consolo e eventual redenção através de atos de decência comum.', 'N-2': {'titulo': 'O Poderoso Chefão', 'ano_lançamento': 1972, 'sinopse': 'O patriarca idoso de uma dinastia do crime organizado transfere o controle de seu império clandestino para seu filho relutante.', 'N_3': {'titulo': 'Batman: O Cavaleiro das Trevas', 'ano_lançamento': 2008, 'sinopse': 'Agora com a ajuda do tenente Jim Gordon e do promotor público Harvey Dent, Batman tem tudo para banir o crime de Gotham City de uma vez por todas. Mas em breve, os três serão vítimas do Coringa, que pretende lançar Gotham em uma anarquia.', 'N-4': {'titulo': 'O Poderoso Chefão: Parte II', 'ano_lançamento': 1974, 'sinopse': 'O início da vida e da carreira de Vito Corleone na década de 1920 em Nova York, enquanto seu filho, Michael, expande e fortalece seu controle sobre o sindicato do crime.', 'N_5': {'titulo': '12 Homens e uma Sentença', 'ano_lançamento': 1957, 'sinopse': 'O julgamento de um assassinato em Nova Iorque é frustrado por um único membro, cujo ceticismo força o júri a considerar cuidadosamente as evidências antes de dar o veredito.', 'N_6': {'titulo': ' O Senhor dos Anéis: O Retorno do Rei', 'ano_de lançamento': 2003, 'sinopse': 'Gandalf e Aragorn lideram o Mundo dos Homens contra o exército de Sauron para desviar o olhar de Frodo e Sam quando eles se aproximam á Montanha da Perdição com o Um Anel.', 'N_7': {'titulo:': 'A Lista de Schindler', 'ano_lançamento': 1993, 'sinopse': 'Na Polônia ocupada pelos alemães durante a Segunda Guerra Mundial, o industrial Os kar Schindler começa a se preocupar com seus trabalhadores judeus depois de testemunhar sua perseguição pelos nazistas.', 'N_8': {'titulo': ' Pulp Fiction: Tempo de Violência', 'ano_lançamento': 1994, 'sinopse': 'As vidas de dois assassinos da máfia, um boxeador, um gângster e sua esposa, e um par de bandidos se entrelaçam em quatro histórias de violência e redenção.', 'N_9': {'titulo': 'O Senhor dos Anéis: A Sociedade do Anel', 'ano_nascimento': 2003, 'sinopse': 'Um manso hobbit do Condado e oito companheiros partem em uma jornada para destruir o poderoso Um Anel e salvar a Terra-média das Trevas.', 'N_10': {'titulo': 'Três Homens em Conflito', 'ano_lançamento': 1966, 'sinopse': 'Um impostor se junta com dois homens para encontrar fortuna num remoto cemitério.'}}}}}}}}}}}\n"
+          ]
+        }
+      ],
+      "source": [
+        "ranking_IMDB = {\n",
+        "    'N_1': {\n",
+        "        'titulo':'Um Sonho de Liberdade',\n",
+        "        'ano_lançamento' : 1994,\n",
+        "        'Sinopse': 'Dois homens presos se reúnem ao longo de vários anos, encontrando consolo e eventual redenção através de atos de decência comum.',\n",
+        "        'N-2' : {\n",
+        "            'titulo':'O Poderoso Chefão',\n",
+        "            'ano_lançamento': 1972,\n",
+        "            'sinopse' :'O patriarca idoso de uma dinastia do crime organizado transfere o controle de seu império clandestino para seu filho relutante.',\n",
+        "            'N_3':{\n",
+        "                'titulo' : 'Batman: O Cavaleiro das Trevas',\n",
+        "                'ano_lançamento': 2008,\n",
+        "                'sinopse': 'Agora com a ajuda do tenente Jim Gordon e do promotor público Harvey Dent, Batman tem tudo para banir o crime de Gotham City de uma vez por todas. Mas em breve, os três serão vítimas do Coringa, que pretende lançar Gotham em uma anarquia.',\n",
+        "                'N-4': {\n",
+        "                    'titulo':'O Poderoso Chefão: Parte II',\n",
+        "                    'ano_lançamento' : 1974,\n",
+        "                    'sinopse': 'O início da vida e da carreira de Vito Corleone na década de 1920 em Nova York, enquanto seu filho, Michael, expande e fortalece seu controle sobre o sindicato do crime.',\n",
+        "                    'N_5': {\n",
+        "                        'titulo' : '12 Homens e uma Sentença',\n",
+        "                        'ano_lançamento':1957,\n",
+        "                        'sinopse' : 'O julgamento de um assassinato em Nova Iorque é frustrado por um único membro, cujo ceticismo força o júri a considerar cuidadosamente as evidências antes de dar o veredito.',\n",
+        "                        'N_6': {\n",
+        "                            'titulo': ' O Senhor dos Anéis: O Retorno do Rei',\n",
+        "                            'ano_de lançamento' : 2003,\n",
+        "                            'sinopse': 'Gandalf e Aragorn lideram o Mundo dos Homens contra o exército de Sauron para desviar o olhar de Frodo e Sam quando eles se aproximam á Montanha da Perdição com o Um Anel.',\n",
+        "                            'N_7' :{\n",
+        "                                'titulo:' :'A Lista de Schindler',\n",
+        "                                'ano_lançamento': 1993,\n",
+        "                                'sinopse' : 'Na Polônia ocupada pelos alemães durante a Segunda Guerra Mundial, o industrial Os kar Schindler começa a se preocupar com seus trabalhadores judeus depois de testemunhar sua perseguição pelos nazistas.',\n",
+        "                                'N_8' : {\n",
+        "                                    'titulo' :' Pulp Fiction: Tempo de Violência',\n",
+        "                                    'ano_lançamento': 1994,\n",
+        "                                    'sinopse': 'As vidas de dois assassinos da máfia, um boxeador, um gângster e sua esposa, e um par de bandidos se entrelaçam em quatro histórias de violência e redenção.',\n",
+        "                                    'N_9':{\n",
+        "                                            'titulo': 'O Senhor dos Anéis: A Sociedade do Anel',\n",
+        "                                            'ano_nascimento': 2003,\n",
+        "                                            'sinopse': 'Um manso hobbit do Condado e oito companheiros partem em uma jornada para destruir o poderoso Um Anel e salvar a Terra-média das Trevas.',\n",
+        "                                            'N_10' :{\n",
+        "                                                'titulo': 'Três Homens em Conflito',\n",
+        "                                                'ano_lançamento' : 1966,\n",
+        "                                                'sinopse' : 'Um impostor se junta com dois homens para encontrar fortuna num remoto cemitério.'\n",
+        "                                            }\n",
+        "                                    }\n",
+        "                                }\n",
+        "                            }\n",
+        "\n",
+        "                        }\n",
+        "\n",
+        "                    }\n",
+        "                }\n",
+        "            }\n",
+        "        }\n",
+        "\n",
+        "    }\n",
+        "}\n",
+        "  \n",
+        "   \n",
+        "        \n",
+        "print (ranking_IMDB)\n",
+        "   "
       ]
     }
   ],
