--- a/Unidade-2/aula-3_whike.ipynb
+++ b/Unidade-2/aula-3_whike.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ca634ff3",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7c821ec2",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "be41aa25",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "624bafb0",
    "metadata": {},
    "outputs": [
@@ -124,10 +124,7 @@
       "0\n",
       "1\n",
       "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n"
+      "3\n"
      ]
     }
    ],
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ac4adb0d",
    "metadata": {},
    "outputs": [
@@ -212,10 +209,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1db9e20c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e5693c6d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ebcb9832",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ListaEncadeada'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mListaEncadeada\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mle\u001b[39;00m \u001b[38;5;66;03m# Cria objeto\u001b[39;00m\n\u001b[32m      2\u001b[39m lista = le.ListaEncadeada()\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mConteúdo da lista :\u001b[39m\u001b[33m\"\u001b[39m,lista) \u001b[38;5;66;03m# A lista está vazia\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'ListaEncadeada'"
+     ]
+    }
+   ],
+   "source": [
+    "import ListaEncadeada as le # Cria objeto\n",
+    "lista = le.ListaEncadeada()\n",
+    "print(\"Conteúdo da lista :\",lista) # A lista está vazia"
+   ]
   }
  ],
  "metadata": {
